feat(gulpfile.js): added new script for javascript

--- a/site/css/normalize.css
+++ b/site/css/normalize.css
@@ -1,4 +1,4 @@
-/* Document: normalize.scss
+/* Document: normalize.css
    ========================================================================== */
 
 /**
