--- a/site/css/sass/components/_layout.scss
+++ b/site/css/sass/components/_layout.scss
@@ -2,18 +2,26 @@
    ========================================================================== */
 
 %container {
-  margin-right: auto;
   margin-left: auto;
-  width: 100%;
-  padding-right: 15px;
+  margin-right: auto;
   padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
 }
 
 .l-container {
   @extend %container;
+
   &--fluid {
     @extend %container;
   }
+}
+
+.l-row {
+  float: left;
+  margin-left: -15px;
+  margin-right: -15px;
+  width: 100%;
 }
 
 @include media-screen($breakpoint-xs-up) {
