fix(sass:lint): fixed the sass lint errors fix(js:hint): fixed the js hint errors

--- a/site/css/sass/components/_base.scss
+++ b/site/css/sass/components/_base.scss
@@ -1,5 +1,5 @@
-/* Document: base.scss
-   ========================================================================== */
+// Document: base.scss
+// ==========================================================================
 
 .page-wrapper {
   height: 100%;
