--- a/site/css/sass/components/_functions.scss
+++ b/site/css/sass/components/_functions.scss
@@ -1,5 +1,5 @@
-/* Document: functions.scss
-   ========================================================================== */
+// Document: functions.scss
+// ==========================================================================
 
 /// function calc-rem
 /// Helper function for to calculate pixel to rem.
