--- a/site/css/sass/components/_layout.scss
+++ b/site/css/sass/components/_layout.scss
@@ -1,5 +1,5 @@
-/* Document: layout.scss
-   ========================================================================== */
+// Document: layout.scss
+// ==========================================================================
 
 %container {
   margin-left: auto;
