--- a/site/css/sass/components/_mixins.scss
+++ b/site/css/sass/components/_mixins.scss
@@ -1,5 +1,5 @@
-/* Document: mixins.scss
-   ========================================================================== */
+// Document: mixins.scss
+// ==========================================================================
 
 /// mixin media-screen
 /// Helper mixin for to generate a media query.
