--- a/site/css/sass/components/_state.scss
+++ b/site/css/sass/components/_state.scss
@@ -1,2 +1,2 @@
-/* Document: state.scss
-   ========================================================================== */
+// Document: state.scss
+// ==========================================================================
