--- a/site/css/sass/components/_theme.scss
+++ b/site/css/sass/components/_theme.scss
@@ -1,2 +1,2 @@
-/* Document: theme.scss
-   ========================================================================== */
+// Document: theme.scss
+// ==========================================================================
