--- a/site/css/sass/components/_utils.scss
+++ b/site/css/sass/components/_utils.scss
@@ -1,2 +1,2 @@
-/* Document: utils.scss
-   ========================================================================== */
+// Document: utils.scss
+// ==========================================================================
