--- a/site/css/sass/components/_variables.scss
+++ b/site/css/sass/components/_variables.scss
@@ -1,5 +1,5 @@
-/* Document: variables.scss
-   ========================================================================== */
+// Document: variables.scss
+// ==========================================================================
 
 // HTML default font-size
 $base-value: 16;
