--- a/site/css/sass/components/_module.scss
+++ b/site/css/sass/components/_module.scss
@@ -1,2 +1,2 @@
-/* Document: module.scss
-   ========================================================================== */
+// Document: module.scss
+// ==========================================================================
